# OOPCourse

./: README.md
clicker/: CMakeLists.txt  clicker  main.cpp
clicker/controller/: gameController.cpp
clicker/model/: gameModel.cpp  gameModel.h
clicker/view/: gameView.cpp  gameView.h
project_example/: a.out  clicker  compile_mvc.sh  gameView.cpp  main  main.cpp  view.cpp  view.h
project_example/controller/: gameController.cpp  gameController.h  gameModel.h
project_example/headers/: gameController.h  gameModel.h  gameView.h
project_example/model/: gameController.cpp  gameModel.cpp
project_example/source/: gameController.cpp  gameModel.cpp  gameView.cpp
project_example/view/: gameView.cpp  gameView.h
zadanie1/: main  main.cpp
